--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,5 @@
 .gradient-background {
     background: linear-gradient(300deg, #00bfff, #ff4c68, #ef8172);
     background-size: 180% 180%;
-    animation: gradient-animation 18s ease infinite;
+    animation: gradient-animation 18s ease infinite;  /*i can delete this line*/
   }
