--- a/styles.css
+++ b/styles.css
@@ -35,10 +35,10 @@ body {
 }
 
 nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 7%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 1rem;
 }
 
 main {
@@ -64,6 +64,44 @@ main {
 
 #skills ul {
   display: flex;
+  text-align: center;
   flex-wrap: wrap;
-  gap: 6rem;
+
+}
+
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: flex-end;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+}
+
+#projects{
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: left;
+  text-align: left;
+}
+
+#projects ul {
+  margin: 1rem;
+  padding: 1rem;
+}
+
+footer {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+h1 {
+  margin: 1rem;
+  padding: 1rem;
 }
