--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,28 @@ nav {
   padding: 1rem;
 }
 
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: flex-end;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #000000;
+  font-weight: 700;
+  font-size: .65rem;
+  padding: .3rem;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+
+}
+
 main {
   flex-grow: 1;
   padding: 2rem 7%;
@@ -69,16 +91,7 @@ main {
 
 }
 
-nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 2rem;
-  justify-content: flex-end;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
 
-}
 
 #projects{
   margin: 1rem;
