--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ nav ul li a {
   text-decoration: none;
   color: #000000;
   font-weight: 700;
-  font-size: .65rem;
+  font-size: 1rem;
   padding: .3rem;
   border-radius: 5px;
   transition: all 0.3s ease;
