--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,23 @@
   box-sizing: border-box;
 }
 
+.foot{
+  color: black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.foot a {
+  color: black;
+}
+
+#hello  h1{
+  color: white;
+  font-size: 125px;
+  text-align: center;
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.6;
@@ -76,6 +93,8 @@ main {
   text-align: center;
   padding: 4rem 0;
 }
+
+
 
 #skills {
   padding: 2rem;
@@ -128,11 +147,7 @@ main {
   padding: 1rem;
 }
 
-footer {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 1rem;
-  padding: 1rem;
-}
+
 
 h1 {
   margin: 1rem;
