--- a/styles.css
+++ b/styles.css
@@ -27,14 +27,23 @@
 }
 
 .foot{
+  display: flex;
+  justify-content: space-between;
+}
+
+.foot p{
   color: black;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 1rem;
   padding: 1rem;
+  text-align: right;
 }
 
-.foot a {
+.foot p a {
   color: black;
+  margin: 1rem;
+  padding: 1rem;
+  text-align: left;
 }
 
 #hello  h1{
