--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ main {
 }
 
 
-#skills {
+#projects {
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -138,7 +138,7 @@ main {
 
 .skillcard {
     flex: 0 0 auto;
-    width: calc(25% - 1rem);  /* Adjust for 4 columns, accounting for gap */
+    width: calc(100% - 1rem);  /* Adjust for 4 columns, accounting for gap */
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
     padding: 3rem;
