--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,17 @@ main {
   gap: 1rem;
 }
 
+.projfeatures {
+  list-style-type: disc;
+  padding-left: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.projfeatures li {
+  margin-bottom: 0.5rem;
+  color: #444;
+}
+
 .skillgrid {
   display: flex;
   flex-direction: row;
